<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black"
    android:padding="@dimen/_8dp">


    <TextView
        android:id="@+id/calcResult"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_4dp"
        android:gravity="end|bottom"
        android:padding="@dimen/_20dp"
        android:text="@string/Zero"
        android:textColor="@color/White"
        app:layout_constraintHeight_percent="0.45"

        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnClear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_90dp"
        android:layout_margin="@dimen/_4dp"
        android:layout_marginTop="@dimen/_8dp"
        android:backgroundTint="@color/Gray"
        android:text="@string/Backspace"
        android:textSize="@dimen/_20sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcResult" />

    <Button
        android:id="@+id/btnAC"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_90dp"
        android:layout_margin="@dimen/_4dp"
        android:layout_marginTop="@dimen/_220dp"
        android:backgroundTint="@color/Gray"
        android:text="@string/ac"
        android:textSize="@dimen/_20sp"
        app:layout_constraintStart_toEndOf="@+id/btnClear"
        app:layout_constraintTop_toBottomOf="@+id/calcResult" />



    <Button
        android:id="@+id/btnPercent"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_90dp"
        android:layout_margin="@dimen/_4dp"
        android:layout_marginStart="@dimen/_64dp"
        android:layout_marginTop="@dimen/_4dp"
        android:backgroundTint="@color/Gray"


        android:text="@string/Percent"
        android:textSize="@dimen/_20sp"
        app:layout_constraintStart_toEndOf="@+id/btnAC"
        app:layout_constraintTop_toBottomOf="@+id/calcResult" />

    <Button
        android:id="@+id/btnDivide"
        android:layout_width="@dimen/_90dp"
        android:layout_height="@dimen/_90dp"
        android:layout_margin="@dimen/_4dp"
        android:backgroundTint="@color/orange"
        android:text="@string/divide"


        android:textSize="@dimen/_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnPercent"
        app:layout_constraintTop_toBottomOf="@+id/calcResult" />

    <Button
        android:id="@+id/btnSeven"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_90dp"
        android:layout_margin="@dimen/_4dp"
        android:layout_marginStart="@dimen/_76dp"
        android:backgroundTint="@color/Gray"
        android:text="@string/seven"
        android:textSize="@dimen/_20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnClear" />


    <Button
        android:id="@+id/btnSix"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_90dp"
        android:layout_margin="@dimen/_4dp"
        android:backgroundTint="@color/Gray"
        android:text="@string/six"
        android:textSize="@dimen/_20sp"


        app:layout_constraintStart_toEndOf="@+id/btnFive"
        app:layout_constraintTop_toBottomOf="@+id/btnNine" />

    <Button
        android:id="@+id/btnFour"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_90dp"
        android:layout_margin="@dimen/_4dp"
        android:backgroundTint="@color/Gray"
        android:text="@string/four"
        android:textSize="@dimen/_20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSeven" />

    <Button
        android:id="@+id/btnOne"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_90dp"
        android:layout_margin="@dimen/_4dp"
        android:backgroundTint="@color/Gray"
        android:text="@string/one"
        android:textSize="@dimen/_20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFour" />

    <Button
        android:id="@+id/btnTwo"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_90dp"
        android:layout_margin="@dimen/_4dp"
        android:backgroundTint="@color/Gray"
        android:text="@string/two"
        android:textSize="@dimen/_20sp"
        app:layout_constraintStart_toEndOf="@+id/btnOne"
        app:layout_constraintTop_toBottomOf="@+id/btnFive" />

    <Button
        android:id="@+id/btnThree"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_90dp"
        android:layout_margin="@dimen/_4dp"
        android:backgroundTint="@color/Gray"
        android:text="@string/three"
        android:textSize="@dimen/_20sp"
        app:layout_constraintStart_toEndOf="@+id/btnTwo"
        app:layout_constraintTop_toBottomOf="@+id/btnSix" />

    <Button
        android:id="@+id/btnFive"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_90dp"
        android:layout_margin="@dimen/_4dp"
        android:backgroundTint="@color/Gray"
        android:text="@string/five"
        android:textSize="@dimen/_20sp"
        app:layout_constraintStart_toEndOf="@+id/btnFour"
        app:layout_constraintTop_toBottomOf="@+id/btnEight" />


    <Button
        android:id="@+id/btnEight"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_90dp"
        android:layout_margin="@dimen/_4dp"
        android:backgroundTint="@color/Gray"
        android:text="@string/_8"
        android:textSize="@dimen/_20sp"
        app:layout_constraintStart_toEndOf="@+id/btnSeven"
        app:layout_constraintTop_toBottomOf="@+id/btnAC" />

    <Button
        android:id="@+id/btnNine"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_90dp"
        android:layout_margin="@dimen/_4dp"
        android:backgroundTint="@color/Gray"
        android:text="@string/nine"
        android:textSize="@dimen/_20sp"
        app:layout_constraintStart_toEndOf="@+id/btnEight"
        app:layout_constraintTop_toBottomOf="@+id/btnPercent" />

    <Button
        android:id="@+id/btnMulty"
        android:layout_width="@dimen/_90dp"
        android:layout_height="@dimen/_90dp"
        android:layout_margin="@dimen/_4dp"
        android:backgroundTint="@color/orange"
        android:text="@string/multiply"


        android:textSize="@dimen/_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnNine"
        app:layout_constraintTop_toBottomOf="@+id/btnDivide" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="@dimen/_90dp"
        android:layout_height="@dimen/_90dp"
        android:layout_margin="@dimen/_4dp"
        android:backgroundTint="@color/orange"
        android:text="@string/plus"


        android:textSize="@dimen/_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSix"
        app:layout_constraintTop_toBottomOf="@+id/btnMulty" />

    <Button
        android:id="@+id/btnEquals"
        android:layout_width="@dimen/_90dp"
        android:layout_height="@dimen/_90dp"
        android:layout_margin="@dimen/_4dp"
        android:backgroundTint="@color/orange"
        android:text="@string/equals"


        android:textSize="@dimen/_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnThree"
        app:layout_constraintTop_toBottomOf="@+id/btnPlus" />



</androidx.constraintlayout.widget.ConstraintLayout>