<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Black"
        android:padding="@dimen/_8dp">

        <TextView
            android:id="@+id/calcResult"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_0dp"
            android:layout_marginTop="@dimen/_4dp"
            android:gravity="end|bottom"
            android:padding="@dimen/_20dp"
            android:text="@string/Zero"
            android:textColor="@color/White"
            android:textSize="@dimen/_60sp"
            app:layout_constraintBottom_toTopOf="@+id/btnClear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.30"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Первый ряд -->
        <Button
            android:id="@+id/btnClear"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_90dp"
            android:layout_margin="@dimen/_4dp"
            android:layout_marginTop="@dimen/_8dp"
            android:backgroundTint="@color/Gray"
            android:text="@string/Backspace"
            android:textSize="@dimen/_20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calcResult" />

        <Button
            android:id="@+id/btnAC"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_90dp"
            android:layout_margin="@dimen/_4dp"
            android:backgroundTint="@color/Gray"
            android:text="@string/ac"
            android:textSize="@dimen/_20sp"
            app:layout_constraintStart_toEndOf="@+id/btnClear"
            app:layout_constraintTop_toBottomOf="@+id/calcResult" />

        <Button
            android:id="@+id/btnPercent"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_90dp"
            android:layout_margin="@dimen/_4dp"
            android:backgroundTint="@color/Gray"
            android:text="@string/Percent"
            android:textSize="@dimen/_20sp"
            app:layout_constraintStart_toEndOf="@+id/btnAC"
            app:layout_constraintTop_toBottomOf="@+id/calcResult" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="@dimen/_90dp"
            android:layout_height="@dimen/_90dp"
            android:layout_margin="@dimen/_4dp"
            android:backgroundTint="@color/orange"
            android:text="@string/divide"
            android:textSize="@dimen/_20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnPercent"
            app:layout_constraintTop_toBottomOf="@+id/calcResult" />

        <!-- Второй ряд -->
        <Button
            android:id="@+id/btnSeven"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_90dp"
            android:layout_margin="@dimen/_4dp"
            android:backgroundTint="@color/Gray"
            android:text="@string/seven"
            android:textSize="@dimen/_20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnClear" />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_90dp"
            android:layout_margin="@dimen/_4dp"
            android:backgroundTint="@color/Gray"
            android:text="@string/eight"
            android:textSize="@dimen/_20sp"
            app:layout_constraintStart_toEndOf="@+id/btnSeven"
            app:layout_constraintTop_toBottomOf="@+id/btnAC" />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_90dp"
            android:layout_margin="@dimen/_4dp"
            android:backgroundTint="@color/Gray"
            android:text="@string/nine"
            android:textSize="@dimen/_20sp"
            app:layout_constraintStart_toEndOf="@+id/btnEight"
            app:layout_constraintTop_toBottomOf="@+id/btnPercent" />

        <Button
            android:id="@+id/btnMulty"
            android:layout_width="@dimen/_90dp"
            android:layout_height="@dimen/_90dp"
            android:layout_margin="@dimen/_4dp"
            android:backgroundTint="@color/orange"
            android:text="@string/multiply"
            android:textSize="@dimen/_20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnNine"
            app:layout_constraintTop_toBottomOf="@+id/btnDivide" />

        <!-- Третий ряд -->
        <Button
            android:id="@+id/btnFour"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_90dp"
            android:layout_margin="@dimen/_4dp"
            android:backgroundTint="@color/Gray"
            android:text="@string/four"
            android:textSize="@dimen/_20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSeven" />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_90dp"
            android:layout_margin="@dimen/_4dp"
            android:backgroundTint="@color/Gray"
            android:text="@string/five"
            android:textSize="@dimen/_20sp"
            app:layout_constraintStart_toEndOf="@+id/btnFour"
            app:layout_constraintTop_toBottomOf="@+id/btnEight" />

        <Button
            android:id="@+id/btnSix"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_90dp"
            android:layout_margin="@dimen/_4dp"
            android:backgroundTint="@color/Gray"
            android:text="@string/six"
            android:textSize="@dimen/_20sp"
            app:layout_constraintStart_toEndOf="@+id/btnFive"
            app:layout_constraintTop_toBottomOf="@+id/btnNine" />

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="@dimen/_90dp"
            android:layout_height="@dimen/_90dp"
            android:layout_margin="@dimen/_4dp"
            android:backgroundTint="@color/orange"
            android:text="@string/minus"
            android:textSize="@dimen/_20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnSix"
            app:layout_constraintTop_toBottomOf="@+id/btnMulty" />

        <!-- Четвертый ряд -->
        <Button
            android:id="@+id/btnOne"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_90dp"
            android:layout_margin="@dimen/_4dp"
            android:backgroundTint="@color/Gray"
            android:text="@string/one"
            android:textSize="@dimen/_20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnFour" />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_90dp"
            android:layout_margin="@dimen/_4dp"
            android:backgroundTint="@color/Gray"
            android:text="@string/two"
            android:textSize="@dimen/_20sp"
            app:layout_constraintStart_toEndOf="@+id/btnOne"
            app:layout_constraintTop_toBottomOf="@+id/btnFive" />

        <Button
            android:id="@+id/btnThree"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_90dp"
            android:layout_margin="@dimen/_4dp"
            android:backgroundTint="@color/Gray"
            android:text="@string/three"
            android:textSize="@dimen/_20sp"
            app:layout_constraintStart_toEndOf="@+id/btnTwo"
            app:layout_constraintTop_toBottomOf="@+id/btnSix" />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="@dimen/_90dp"
            android:layout_height="@dimen/_90dp"
            android:layout_margin="@dimen/_4dp"
            android:backgroundTint="@color/orange"
            android:text="@string/plus"
            android:textSize="@dimen/_20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnThree"
            app:layout_constraintTop_toBottomOf="@+id/btnMinus" />

        <Button
            android:id="@+id/btnReverse"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_90dp"
            android:layout_margin="@dimen/_4dp"
            android:backgroundTint="@color/Gray"
            android:text="@string/reverse"
            android:textSize="@dimen/_20sp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnOne" />


        <Button
            android:id="@+id/btnZero"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_90dp"
            android:layout_margin="@dimen/_4dp"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/Gray"
            android:text="@string/Zero"
            android:textSize="@dimen/_20sp"

            app:layout_constraintStart_toEndOf="@+id/btnReverse"
            app:layout_constraintTop_toBottomOf="@+id/btnTwo" />

        <Button
            android:id="@+id/btnDot"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_90dp"
            android:layout_margin="@dimen/_4dp"
            android:backgroundTint="@color/Gray"
            android:text="@string/dot"
            android:textSize="@dimen/_20sp"
            app:layout_constraintStart_toEndOf="@+id/btnZero"
            app:layout_constraintTop_toBottomOf="@+id/btnTwo" />

        <Button
            android:id="@+id/btnEquals"
            android:layout_width="@dimen/_90dp"
            android:layout_height="@dimen/_90dp"
            android:layout_margin="@dimen/_4dp"
            android:backgroundTint="@color/orange"
            android:text="@string/equals"
            android:textSize="@dimen/_20sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnDot"
            app:layout_constraintTop_toBottomOf="@+id/btnPlus" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>