<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.example.myapp.presentation.main.ui.MainFragment"
        android:label="@string/mainmenu"
        tools:layout="@layout/fragment_main">

        <action
            android:id="@+id/action_main_to_weather"
            app:destination="@id/weatherFragment" />
        <action
            android:id="@+id/action_main_to_calculator"
            app:destination="@id/calculatorFragment" />

    </fragment>

    <fragment
        android:id="@+id/weatherFragment"
        android:name="com.example.myapp.presentation.weather.ui.WeatherFragment"
        android:label="@string/weather_title"
        tools:layout="@layout/fragment_weather">

        <argument
            android:name="city"
            app:argType="string"
            android:defaultValue="Moscow" />

        <action
            android:id="@+id/action_weather_to_detail"
            app:destination="@id/weatherDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/weatherDetailFragment"
        android:name="com.example.myapp.presentation.weather.ui.WeatherDetailFragment"
        android:label="@string/weather_detail_title"
        tools:layout="@layout/fragment_weather_detail">

        <argument
            android:name="forecast"
            app:argType="com.example.myapp.domain.weather.model.WeatherForecast"
            app:nullable="true" />
    </fragment>


    <fragment
        android:id="@+id/calculatorFragment"
        android:name="com.example.myapp.presentation.calculator.ui.CalculatorFragment"
        android:label="@string/calculator_title"
        tools:layout="@layout/fragment_calculator" />



</navigation>