<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/mainMenuButton"
        android:layout_width="@dimen/_220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_100dp"
        android:layout_marginTop="@dimen/_40dp"
        android:backgroundTint="@color/Pink"
        android:text="@string/mainmenu"
        android:textSize="@dimen/_22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cameraButton"
        android:layout_width="@dimen/_220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_100dp"
        android:layout_marginTop="@dimen/_40dp"
        android:text="@string/camera"
        android:textSize="@dimen/_22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainMenuButton" />

    <Button
        android:id="@+id/openCalc"
        android:layout_height="wrap_content"
        android:layout_width="@dimen/_220dp"
        android:layout_marginStart="@dimen/_100dp"
        android:layout_marginTop="@dimen/_40dp"
        android:text="@string/calculator"
        android:backgroundTint="@color/Green"
        android:textSize="@dimen/_22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cameraButton"

        />
</androidx.constraintlayout.widget.ConstraintLayout>